--- a/admin/public/styles/variables.less
+++ b/admin/public/styles/variables.less
@@ -9,7 +9,7 @@
 // ------------------------------
 
 @octicons-font-path: '../fonts/octicons';
-
+@link-color: #ffca45;
 
 
 
@@ -66,7 +66,7 @@
 // ------------------------------
 
 @primary-navbar-bg:                   @link-color;
-@primary-navbar-color:                white;
+@primary-navbar-color:              #4d4b4c;
 @primary-navbar-padding-vertical:     .75em;
 @primary-navbar-padding-horizontal:   1.5em;
 @primary-navbar-hover-bg:             transparent;
